--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Anna Su <newstory0113@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "json-server": "^0.9.4",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
