--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React To-Do List",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "concurrently --kill-others 'webpack-dev-server' 'json-server --watch db.json'",
+    "backend": "json-server --watch db.json",
     "build": "webpack -p"
   },
   "author": "Anna Su <newstory0113@gmail.com>",
@@ -28,6 +29,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "concurrently": "^3.1.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
