--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rucksack-css": "^0.8.6",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "sw-precache-webpack-plugin": "^0.7.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
